---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u8, result: [u8; 32]) {
    let x: u8 = x % 31;
    let mut digest: [u8; 32] = [0; 32];
    for i in 0..70 {
        let y: u8 = x + i;
        let a: [u8; 8] = [y, x, 32, 0, y + 1, y - 1, y - 2, 5];
        digest = std::hash::blake3(a);
    }
    assert(digest == result);
}
